commit 5 - modularizei com es_modules

--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
       </div>
     </section>
 
-    <script src="./index.js"></script>
+    <script src="./es_modules/index.js" type="module"></script>
   </body>
 </html>
